k8s/app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
  annotations:
   # service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  selector:
    app: petclinic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
